--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -5,63 +5,72 @@
   <title>Document</title>
 </head>
 <body>
-  <script>
-    // ## Array Cardio Day 2
+<script>
+  // ## Array Cardio Day 2
 
-    const people = [
-      { name: 'Wes', year: 1988 },
-      { name: 'Kait', year: 1986 },
-      { name: 'Irv', year: 1970 },
-      { name: 'Lux', year: 2015 }
-    ];
+  const people = [
+    { name: 'Wes', year: 1988 },
+    { name: 'Kait', year: 1986 },
+    { name: 'Irv', year: 1970 },
+    { name: 'Lux', year: 2015 },
+  ];
 
-    const comments = [
-      { text: 'Love this!', id: 523423 },
-      { text: 'Super good', id: 823423 },
-      { text: 'You are the best', id: 2039842 },
-      { text: 'Ramen in my fav food ever', id: 123523 },
-      { text: 'Nice Nice Nice!', id: 542328 }
-    ];
+  const comments = [
+    { text: 'Love this!', id: 523423 },
+    { text: 'Super good', id: 823423 },
+    { text: 'You are the best', id: 2039842 },
+    { text: 'Ramen in my fav food ever', id: 123523 },
+    { text: 'Nice Nice Nice!', id: 542328 }
+  ];
 
-    // Some and Every Checks
-    // Array.prototype.some() // is at least one person 19?
-    // const isAdult = people.some(function(person) {
-    //   const currentYear = (new Date()).getFullYear();
-    //   if(currentYear - person.year >= 19) {
-    //     return true;
-    //   }
-    // });
+  // Some and Every Checks
+  // Array.prototype.some() // is at least one person 19?
 
-    const isAdult = people.some(person => ((new Date()).getFullYear()) - person.year >= 19);
+    const anyNineteens = people.some(person => {
+              const currentYear = new Date().getFullYear();
+              return currentYear - person.year >= 19;
+            });
 
-    console.log({isAdult});
-    // Array.prototype.every() // is everyone 19?
+  console.log({anyNineteens});
 
-    const allAdults = people.every(person => ((new Date()).getFullYear()) - person.year >= 19);
-    console.log({allAdults});
+  // Array.prototype.every() // is everyone 19?
 
-    // Array.prototype.find()
-    // Find is like filter, but instead returns just the one you are looking for
-    // find the comment with the ID of 823423
+    const allAdults = people.every(person => {
+              const currentYear = new Date().getFullYear();
+              return currentYear - person.year > 19;
+            });
+
+  console.log({allAdults});
+
+  // Array.prototype.find()
+  // Find is like filter, but instead returns just the one you are looking for
+  // find the comment with the ID of 823423
 
 
-    const comment = comments.find(comment => comment.id === 823423);
+  const comment = comments.find(comment => comment.id === 823423);
 
-    console.log(comment);
+  console.table(comments);
 
-    // Array.prototype.findIndex()
-    // Find the comment with this ID
-    // delete the comment with the ID of 823423
-    const index = comments.findIndex(comment => comment.id === 823423);
-    console.log(index);
+  console.log(comment);
 
-    // comments.splice(index, 1);
+  // Array.prototype.findIndex()
+  // Find the comment with this ID
+  // delete the comment with the ID of 823423
 
-    const newComments = [
-      ...comments.slice(0, index),
-      ...comments.slice(index + 1)
-    ];
+  const delComment = comments.findIndex(comment => comment.id === 823423);
 
-  </script>
+  console.log(delComment);
+
+  // comments.splice(index, 1);
+
+  const newComments = [
+          ...comments.slice(0, delComment),
+          ...comments.slice(delComment + 1)
+  ];
+
+  console.table(newComments);
+
+
+</script>
 </body>
 </html>
