--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -104,6 +104,39 @@
   </div>
 
 <script>
+
+const checkboxes = document.querySelectorAll(".inbox input[type='checkbox']");
+  console.log(checkboxes);
+
+let lastChecked;
+
+  function getClicked(e) {
+
+    let inBetween = false;
+
+    if(e.shiftKey && this.checked) {
+
+      checkboxes.forEach(checkbox => {
+        if(checkbox === this || checkbox === lastChecked) {
+        inBetween = !inBetween;
+      }
+
+      if(inBetween) {
+        checkbox.checked = true;
+      }
+        console.log(checkbox);
+      });
+
+    }
+  lastChecked = this;
+  }
+
+/*  checkboxes.forEach(checkbox => {
+    checkbox.addEventListener("click", getClicked)
+  });*/
+
+  checkboxes.forEach(checkbox => checkbox.addEventListener("click", getClicked));
+
 </script>
 </body>
 </html>
