--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -26,9 +26,12 @@
   </div>
 
 <script>
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
+
+  const addItems = document.querySelector(".add-items");
+  const itemsList = document.querySelector(".plates");
   const items = [];
+
+  addItems.addEventListener("submit", pushPlates);
 
 </script>
 
