--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -20,7 +20,7 @@
       <li>Loading Tapas...</li>
     </ul>
     <form class="add-items">
-      <input type="text" name="item" placeholder="Item Name" required>
+      <input type="text" name="item" autocomplete="off" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
   </div>
@@ -29,9 +29,51 @@
 
   const addItems = document.querySelector(".add-items");
   const itemsList = document.querySelector(".plates");
-  const items = [];
+  const items = JSON.parse(localStorage.getItem("items")) || [];
 
-  addItems.addEventListener("submit", pushPlates);
+  function addItem(e) {
+    e.preventDefault();
+
+    const text = (this.querySelector("[name=item]")).value;
+    const item = {
+      text: text,
+      done: false
+    };
+
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem("items", JSON.stringify(items));
+    this.reset();
+
+    console.log(item);
+
+  }
+
+  function populateList(plates = [], platesList) {
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''}/>
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join("");
+  }
+
+  function toggleDone(e) {
+    if (!e.target.matches("input")) return;
+    const el = e.target;
+    const index = el.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem("items", JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+
+  addItems.addEventListener("submit", addItem);
+  itemsList.addEventListener("click", toggleDone);
+
+  populateList(items, itemsList);
 
 </script>
 
