--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -45,6 +45,25 @@
 <script>
 const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
+  function strip(bandName) {
+    return bandName.replace(/^(a |the |an )/i, "").trim();
+  }
+
+  var sortedBands = bands.sort((a, b) => {
+            return strip(a) > strip(b) ? 1 : -1;
+/*    if(strip(a) > strip(b)) {
+        return 1;
+      } else {
+        return -1;
+      }*/
+  });
+
+console.log(sortedBands);
+
+var bandsContainer = document.querySelector("#bands");
+
+bandsContainer.innerHTML = sortedBands.map(band => `<li>${band}</li>`).join("");
+
 
 </script>
 
