--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -213,14 +213,17 @@
   const background = document.querySelector(".dropdownBackground");
   const nav = document.querySelector(".top");
 
-  function handleEnter() {
+  function handleEnter(e) {
+    this.classList.add("trigger-enter");
+    setTimeout(function() {
+      e.target.classList.add("trigger-enter-active");
+    }, 150);
+    //setTimeout(() => this.classList.add("trigger-enter-active"), 150); // arrow function option
 
-    console.log("Enter!");
   }
 
   function handleLeave() {
-
-    console.log("Leave!");
+    this.classList.remove("trigger-enter", "trigger-enter-active");
   }
 
   triggers.forEach(trigger => trigger.addEventListener("mouseenter", handleEnter));
