Finished scrolling the div

--- a/27 - Click and Drag/index-START.html
+++ b/27 - Click and Drag/index-START.html
@@ -45,7 +45,7 @@
     isDown = true;
     slider.classList.add("active");
     startX = e.pageX - slider.offsetLeft;
-    console.log(startX);
+    scrollLeft = slider.scrollLeft;
   }
 
   function sliderMouseleave() {
@@ -58,10 +58,12 @@
     slider.classList.remove("active");
   }
 
-  function sliderMousemove() {
+  function sliderMousemove(e) {
     if(!isDown) return;
-    console.log(isDown);
-
+    const x = e.pageX - slider.offsetLeft;
+    const walk = (x - startX) * 3;
+    slider.scrollLeft = scrollLeft - walk;
+    console.log({x, startX});
   }
 
   slider.addEventListener("mousedown", (e) => {
@@ -76,8 +78,9 @@
     sliderMouseup();
   });
 
-  slider.addEventListener("mousemove", () => {
-    sliderMousemove();
+  slider.addEventListener("mousemove", (e) => {
+    e.preventDefault();
+    sliderMousemove(e);
   });
 
 </script>
