--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -15,6 +15,26 @@
   </div>
 
 <script>
+  const speed = document.querySelector(".speed");
+  const bar = document.querySelector(".speed-bar");
+  const video = document.querySelector(".flex");
+
+  function dragBar(e) {
+    e.preventDefault();
+
+    const start = e.pageY - speed.offsetTop;
+    const percent = start / speed.offsetHeight;
+    const min = 0.4;
+    const max = 4;
+    const height = Math.round(percent * 100) + "%";
+    const playbackRate = percent * (max - min) + min;
+    bar.style.height = height;
+    bar.textContent = playbackRate.toFixed(2) + "x";
+    video.playbackRate = playbackRate;
+  }
+
+  speed.addEventListener("mousemove", dragBar);
+
 </script>
 </body>
 </html>
